Enhance contact section with icons and new styles
Replaced emoji icons with Font Awesome icons in the contact section for a more professional look. Added Font Awesome CDN to index.html and introduced comprehensive CSS for the contact section, including responsive design and button hover effects.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         rel="stylesheet">
     <!-- Devicon for programming language icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <!-- Font Awesome for contact icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Standard favicon -->
     <link rel="icon" href="./assets/logo.png" type="image/x-icon">
 
@@ -642,21 +644,27 @@
                         latest in tech, I'm always excited to connect with fellow innovators.</p>
                     <div class="contact-details">
                         <div class="contact-item">
-                            <div class="contact-icon">📧</div>
+                            <div class="contact-icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
                             <div class="contact-text">
                                 <span class="contact-label">Email</span>
                                 <a href="mailto:uwamimgxekwa@gmail.com">uwamimgxekwa@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-item">
-                            <div class="contact-icon">📱</div>
+                            <div class="contact-icon">
+                                <i class="fas fa-phone-alt"></i>
+                            </div>
                             <div class="contact-text">
                                 <span class="contact-label">Phone</span>
                                 <a href="tel:+27635722080">+27 63 572 2080</a>
                             </div>
                         </div>
                         <div class="contact-item">
-                            <div class="contact-icon">📍</div>
+                            <div class="contact-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
                             <div class="contact-text">
                                 <span class="contact-label">Location</span>
                                 <span>Gauteng, South Africa</span>
@@ -667,28 +675,36 @@
                 <div class="contact-actions">
                     <div class="contact-grid">
                         <a href="mailto:uwamimgxekwa@gmail.com" class="contact-button email">
-                            <div class="button-icon">✉️</div>
+                            <div class="button-icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
                             <div class="button-text">
                                 <span class="button-title">Send Email</span>
                                 <span class="button-subtitle">Professional inquiries</span>
                             </div>
                         </a>
                         <a href="https://wa.me/+27635722080?text=hi%20%20" class="contact-button whatsapp">
-                            <div class="button-icon">💬</div>
+                            <div class="button-icon">
+                                <i class="fab fa-whatsapp"></i>
+                            </div>
                             <div class="button-text">
                                 <span class="button-title">WhatsApp</span>
                                 <span class="button-subtitle">Quick chat</span>
                             </div>
                         </a>
                         <a href="https://github.com/Uwami-Mgxekwa" class="contact-button github">
-                            <div class="button-icon">🐙</div>
+                            <div class="button-icon">
+                                <i class="fab fa-github"></i>
+                            </div>
                             <div class="button-text">
                                 <span class="button-title">GitHub</span>
                                 <span class="button-subtitle">View my code</span>
                             </div>
                         </a>
                         <a href="tel:+27635722080" class="contact-button phone">
-                            <div class="button-icon">📞</div>
+                            <div class="button-icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
                             <div class="button-text">
                                 <span class="button-title">Call Direct</span>
                                 <span class="button-subtitle">Let's talk</span>
