Update name from Owami to Uwami Mgxekwa
Replaced all instances of 'Owami Mgxekwa' with 'Uwami Mgxekwa' throughout index.html, including titles, alt text, CV references, and footer. This ensures consistency with the correct name across the site.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Owami Mgxekwa - Developer & Educator</title>
+    <title>Uwami Mgxekwa - Developer & Educator</title>
     <meta name="description"
         content="Software Developer & IT Systems Development Lecturer specializing in Java, JavaScript, and modern web technologies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -173,7 +173,7 @@
                                 <span>OM</span>
                             </div>
                             <div class="profile-info">
-                                <h4>Owami Mgxekwa</h4>
+                                <h4>Uwami Mgxekwa</h4>
                                 <p>Developer & Educator</p>
                                 <div class="profile-status">
                                     <div class="status-dot"></div>
@@ -213,7 +213,7 @@
                     <div class="cv-document">
                         <div class="document-icon">📄</div>
                         <div class="document-info">
-                            <h3>Owami Mgxekwa's CV</h3>
+                            <h3>Uwami Mgxekwa's CV</h3>
                             <p>Complete professional experience, education, and skills overview</p>
                             <div class="document-meta">
                                 <span class="file-type">PDF Document</span>
@@ -246,7 +246,7 @@
                         </ul>
                     </div>
                     <div class="cv-buttons">
-                        <a href="./assets/Uwami Mgxekwa's CV.pdf" download="Owami_Mgxekwa_CV.pdf"
+                        <a href="./assets/Uwami Mgxekwa's CV.pdf" download="Uwami_Mgxekwa_CV.pdf"
                             class="cv-button primary">
                             <div class="button-icon">⬇️</div>
                             <div class="button-text">
@@ -277,7 +277,7 @@
         <div class="image-gallery">
             <div class="image-card">
                 <div class="image-container">
-                    <img src="./images/1.jpg" alt="Owami teaching programming" loading="lazy">
+                    <img src="./images/1.jpg" alt="Uwami teaching programming" loading="lazy">
                 </div>
                 <div class="image-overlay">
                     <h3>The Educator</h3>
@@ -286,7 +286,7 @@
             </div>
             <div class="image-card">
                 <div class="image-container">
-                    <img src="./images/2.jpg" alt="Owami coding" loading="lazy">
+                    <img src="./images/2.jpg" alt="Uwami coding" loading="lazy">
                 </div>
                 <div class="image-overlay">
                     <h3>The Developer</h3>
@@ -295,7 +295,7 @@
             </div>
             <div class="image-card">
                 <div class="image-container">
-                    <img src="./images/3.jpg" alt="Owami collaborating" loading="lazy">
+                    <img src="./images/3.jpg" alt="Uwami collaborating" loading="lazy">
                 </div>
                 <div class="image-overlay">
                     <h3>The Collaborator</h3>
@@ -726,7 +726,7 @@
                     <p>Building the future, one line of code at a time.</p>
                 </div>
                 <div class="footer-right">
-                    <p>&copy; 2025 Owami Mgxekwa. Crafted with passion and precision.</p>
+                    <p>&copy; 2025 Uwami Mgxekwa. Crafted with passion and precision.</p>
                 </div>
             </div>
         </div>
@@ -743,7 +743,7 @@
                 <span>OM</span>
             </div>
             <div class="chatbot-info">
-                <h3>Owami's Assistant</h3>
+                <h3>Uwami's Assistant</h3>
                 <p><span class="status-dot"></span> Online • Ready to help!</p>
             </div>
         </div>
@@ -752,7 +752,7 @@
                 <div class="message-avatar">OM</div>
                 <div>
                     <div class="message-content">
-                        Hi! 👋 I'm Owami's personal assistant. How can I help you learn more about Owami's work and
+                        Hi! 👋 I'm Uwami's personal assistant. How can I help you learn more about Uwami's work and
                         expertise?
                     </div>
                     <div class="quick-replies">
@@ -772,7 +772,7 @@
         </div>
     </div>
 
-    <script src="./js/chatbot.js"></script> <!-- ADD THIS NEW LINE -->
+    <script src="./js/chatbot.js"></script>
     <script src="./js/script.js"></script>
 
 </body>
