--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav class="navbar" id="navbar"></nav>
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">OM</span>
+                <span class="logo-text">UM</span>
                 <div class="logo-pulse"></div>
             </div>
             <ul class="nav-menu" id="nav-menu">
@@ -170,7 +170,7 @@
                     <div class="profile-card">
                         <div class="profile-header">
                             <div class="profile-avatar">
-                                <span>OM</span>
+                                <span>UM</span>
                             </div>
                             <div class="profile-info">
                                 <h4>Uwami Mgxekwa</h4>
@@ -721,7 +721,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <span class="logo-text">OM</span>
+                        <span class="logo-text">UM</span>
                     </div>
                     <p>Building the future, one line of code at a time.</p>
                 </div>
@@ -740,7 +740,7 @@
     <div class="chatbot-container" id="chatbotContainer">
         <div class="chatbot-header">
             <div class="chatbot-avatar">
-                <span>OM</span>
+                <span>UM</span>
             </div>
             <div class="chatbot-info">
                 <h3>Uwami's Assistant</h3>
@@ -749,7 +749,7 @@
         </div>
         <div class="chatbot-messages" id="chatbotMessages">
             <div class="message bot">
-                <div class="message-avatar">OM</div>
+                <div class="message-avatar">UM</div>
                 <div>
                     <div class="message-content">
                         Hi! 👋 I'm Uwami's personal assistant. How can I help you learn more about Uwami's work and
