replaced with icons

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                     Crafting digital experiences through code while shaping the next generation of developers at Gauteng
                     City College
                 </p>
+                <div class="personal-note">
+                    <p>"I still remember the first time a student's eyes lit up when their Java program finally compiled. 
+                       That's when I knew teaching wasn't just a job—it was my calling."</p>
+                </div>
                 <div class="hero-stats">
                     <div class="stat">
                         <span class="stat-number" data-count="7">0</span>
@@ -147,27 +151,29 @@
             <div class="about-content">
                 <div class="about-text">
                     <div class="about-card">
-                        <h3>The Developer</h3>
+                        <h3><i class="fas fa-code"></i> The Developer</h3>
                         <p>
-                            Passionate about creating robust applications with Java Swing as my primary toolkit,
-                            while exploring the dynamic world of modern web technologies. My code is my craft,
-                            and every project is an opportunity to push boundaries.
+                            My coding journey started in 2019 with C++, but Java Swing became my true love. There's something 
+                            magical about building desktop applications that solve real problems. Every line of code I write 
+                            carries the lessons I've learned from both successes and those late-night debugging sessions 
+                            we all know too well.
                         </p>
                     </div>
                     <div class="about-card">
-                        <h3>The Educator</h3>
+                        <h3><i class="fas fa-chalkboard-teacher"></i> The Educator</h3>
                         <p>
-                            As an IT Systems Development Lecturer at Gauteng City College, I bridge the gap
-                            between theoretical knowledge and practical application, inspiring students to
-                            become the innovators of tomorrow.
+                            Teaching at Gauteng City College isn't just about explaining syntax—it's about watching 
+                            someone discover they can create something from nothing. I've seen quiet students become 
+                            confident developers, and that transformation never gets old. My classroom is where 
+                            "impossible" becomes "I did it!"
                         </p>
                     </div>
                     <div class="about-card">
-                        <h3>The Learner</h3>
+                        <h3><i class="fas fa-graduation-cap"></i> The Learner</h3>
                         <p>
-                            Currently diving deep into React, TypeScript, and C# to expand my full-stack
-                            capabilities. In technology, the moment you stop learning is the moment you
-                            become obsolete.
+                            Currently diving into React, TypeScript, and C# because the tech world never stops moving. 
+                            Some days I'm the teacher, other days I'm googling error messages just like my students. 
+                            That's the beauty of this field—we're all learning together, and that keeps things exciting.
                         </p>
                     </div>
                 </div>
@@ -216,7 +222,7 @@
             <div class="cv-content">
                 <div class="cv-preview">
                     <div class="cv-document">
-                        <div class="document-icon">📄</div>
+                        <div class="document-icon"><i class="fas fa-file-pdf"></i></div>
                         <div class="document-info">
                             <h3>Uwami Mgxekwa's CV</h3>
                             <p>Complete professional experience, education, and skills overview</p>
@@ -233,19 +239,19 @@
                         <h4>What's Inside:</h4>
                         <ul class="highlights-list">
                             <li>
-                                <span class="highlight-icon">🎓</span>
+                                <span class="highlight-icon"><i class="fas fa-graduation-cap"></i></span>
                                 <span>Educational Background & Certifications</span>
                             </li>
                             <li>
-                                <span class="highlight-icon">💼</span>
+                                <span class="highlight-icon"><i class="fas fa-briefcase"></i></span>
                                 <span>Professional Experience & Achievements</span>
                             </li>
                             <li>
-                                <span class="highlight-icon">🛠️</span>
+                                <span class="highlight-icon"><i class="fas fa-tools"></i></span>
                                 <span>Technical Skills & Competencies</span>
                             </li>
                             <li>
-                                <span class="highlight-icon">🏆</span>
+                                <span class="highlight-icon"><i class="fas fa-trophy"></i></span>
                                 <span>Projects & Portfolio Highlights</span>
                             </li>
                         </ul>
@@ -253,14 +259,14 @@
                     <div class="cv-buttons">
                         <a href="./assets/Uwami Mgxekwa's CV.pdf" download="Uwami_Mgxekwa_CV.pdf"
                             class="cv-button primary">
-                            <div class="button-icon">⬇️</div>
+                            <div class="button-icon"><i class="fas fa-download"></i></div>
                             <div class="button-text">
                                 <span class="button-title">Download CV</span>
                                 <span class="button-subtitle">PDF Format</span>
                             </div>
                         </a>
                         <a href="./assets/Uwami Mgxekwa's CV.pdf" target="_blank" class="cv-button secondary">
-                            <div class="button-icon">👁️</div>
+                            <div class="button-icon"><i class="fas fa-eye"></i></div>
                             <div class="button-text">
                                 <span class="button-title">View Online</span>
                                 <span class="button-subtitle">Open in browser</span>
@@ -285,7 +291,7 @@
                     <img src="./images/1.jpg" alt="Uwami teaching programming" loading="lazy">
                 </div>
                 <div class="image-overlay">
-                    <h3>The Educator</h3>
+                    <h3><i class="fas fa-chalkboard-teacher"></i> The Educator</h3>
                     <p>Sharing knowledge with students at Gauteng City College</p>
                 </div>
             </div>
@@ -294,7 +300,7 @@
                     <img src="./images/2.jpg" alt="Uwami coding" loading="lazy">
                 </div>
                 <div class="image-overlay">
-                    <h3>The Developer</h3>
+                    <h3><i class="fas fa-laptop-code"></i> The Developer</h3>
                     <p>Crafting solutions with Java and modern technologies</p>
                 </div>
             </div>
@@ -303,7 +309,7 @@
                     <img src="./images/3.jpg" alt="Uwami collaborating" loading="lazy">
                 </div>
                 <div class="image-overlay">
-                    <h3>The Collaborator</h3>
+                    <h3><i class="fas fa-handshake"></i> The Collaborator</h3>
                     <p>Working with peers to solve complex problems</p>
                 </div>
             </div>
@@ -494,14 +500,16 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
-                        <div class="project-icon">🏫</div>
+                        <div class="project-icon"><i class="fas fa-school"></i></div>
                         <div class="project-meta">
                             <h3>Student Management System</h3>
                             <span class="project-type">Java Swing Desktop Application</span>
                         </div>
                     </div>
                     <p class="project-description">
-                        Comprehensive desktop application for managing student records, grades, and academic progress with intuitive GUI design and database integration.
+                        Built this when I realized how much time teachers spend on paperwork instead of actual teaching. 
+                        It handles student records, grades, and progress tracking with a clean Java Swing interface. 
+                        Seeing it used in real classrooms made all those late coding nights worth it.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
@@ -518,14 +526,16 @@
 
                 <div class="project-card">
                     <div class="project-header">
-                        <div class="project-icon">🍃</div>
+                        <div class="project-icon"><i class="fas fa-leaf"></i></div>
                         <div class="project-meta">
                             <h3>Spring Boot REST API</h3>
                             <span class="project-type">Backend Application</span>
                         </div>
                     </div>
                     <p class="project-description">
-                        Enterprise-grade RESTful API built with Spring Boot, featuring JWT authentication, data validation, and comprehensive error handling.
+                        Started as a learning project to understand Spring Boot, but turned into something I'm genuinely proud of. 
+                        Features JWT authentication, proper data validation, and error handling that actually helps instead of confuses. 
+                        It's the kind of API I wish I had when I was starting out.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Spring Boot</span>
@@ -542,14 +552,16 @@
 
                 <div class="project-card">
                     <div class="project-header">
-                        <div class="project-icon">💼</div>
+                        <div class="project-icon"><i class="fas fa-boxes"></i></div>
                         <div class="project-meta">
                             <h3>Inventory Management System</h3>
                             <span class="project-type">Java Desktop Application</span>
                         </div>
                     </div>
                     <p class="project-description">
-                        Full-featured inventory tracking system with real-time stock monitoring, automated alerts, and comprehensive reporting capabilities.
+                        This one came from watching a local business owner struggle with spreadsheets for inventory. 
+                        Real-time stock monitoring, automated alerts when things run low, and reports that actually make sense. 
+                        Sometimes the best projects come from solving problems you see right in front of you.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
@@ -575,9 +587,10 @@
             <div class="timeline">
                 <div class="timeline-item" data-year="2019">
                     <div class="timeline-content">
-                        <h3>Programming Foundations</h3>
-                        <p>Started with C++ and discovered the beauty of algorithmic thinking and system programming.
-                        </p>
+                        <h3>The Beginning</h3>
+                        <p>Wrote my first "Hello World" in C++ and got completely hooked. Spent countless hours figuring out 
+                           pointers and wondering why my programs crashed so much. Those early struggles taught me more 
+                           about persistence than any textbook ever could.</p>
                         <div class="timeline-tech">
                             <span>C++</span>
                             <span>Algorithms</span>
@@ -586,9 +599,10 @@
                 </div>
                 <div class="timeline-item" data-year="2020">
                     <div class="timeline-content">
-                        <h3>Java Mastery</h3>
-                        <p>Dove deep into Java development, specializing in desktop applications with Swing framework.
-                        </p>
+                        <h3>Finding My Language</h3>
+                        <p>Discovered Java and fell in love with Swing. Built my first GUI application and felt like a wizard. 
+                           There's something deeply satisfying about creating interfaces that people can actually click and use. 
+                           Java became my home base.</p>
                         <div class="timeline-tech">
                             <span>Java</span>
                             <span>Swing</span>
@@ -598,9 +612,10 @@
                 </div>
                 <div class="timeline-item" data-year="2021">
                     <div class="timeline-content">
-                        <h3>Web Development</h3>
-                        <p>Expanded into web technologies, mastering HTML, CSS, and JavaScript for modern web
-                            applications.</p>
+                        <h3>Web Curiosity</h3>
+                        <p>Decided to explore the web side of things. HTML and CSS felt like learning a new language, 
+                           and JavaScript... well, let's just say it took a while to understand why "==" and "===" 
+                           are different. But once it clicked, a whole new world opened up.</p>
                         <div class="timeline-tech">
                             <span>HTML5</span>
                             <span>CSS3</span>
@@ -610,8 +625,10 @@
                 </div>
                 <div class="timeline-item" data-year="2022">
                     <div class="timeline-content">
-                        <h3>Database & Python</h3>
-                        <p>Added database management and Python to my toolkit for data-driven applications.</p>
+                        <h3>Data & Python</h3>
+                        <p>Added SQL and Python to my toolkit. Python felt like a breath of fresh air after Java's verbosity. 
+                           Started building tools to analyze data and automate boring tasks. Turns out, making computers 
+                           do repetitive work never gets old.</p>
                         <div class="timeline-tech">
                             <span>SQL</span>
                             <span>Python</span>
@@ -621,9 +638,10 @@
                 </div>
                 <div class="timeline-item" data-year="2024">
                     <div class="timeline-content">
-                        <h3>Teaching & Mentoring</h3>
-                        <p>Began my journey as an educator at Gauteng City College, sharing knowledge with aspiring
-                            developers.</p>
+                        <h3>The Teaching Chapter</h3>
+                        <p>Started teaching at Gauteng City College and discovered my true calling. Watching students 
+                           have those "aha!" moments reminded me why I fell in love with programming in the first place. 
+                           Teaching has made me a better developer, and developing has made me a better teacher.</p>
                         <div class="timeline-tech">
                             <span>Education</span>
                             <span>Mentoring</span>
@@ -633,8 +651,10 @@
                 </div>
                 <div class="timeline-item" data-year="2025">
                     <div class="timeline-content">
-                        <h3>Modern Stack Learning</h3>
-                        <p>Currently exploring React, TypeScript, and C# to build more sophisticated applications.</p>
+                        <h3>Always Learning</h3>
+                        <p>Currently wrestling with React hooks and TypeScript types while my students ask me about 
+                           TikTok algorithms. The tech world moves fast, but that's what keeps it interesting. 
+                           Every day brings something new to figure out.</p>
                         <div class="timeline-tech">
                             <span>React</span>
                             <span>TypeScript</span>
@@ -654,9 +674,10 @@
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Ready to collaborate?</h3>
-                    <p>Whether you're looking for a developer, need educational consulting, or want to discuss the
-                        latest in tech, I'm always excited to connect with fellow innovators.</p>
+                    <h3>Let's Chat</h3>
+                    <p>Whether you're a fellow developer, a student with questions, or someone who needs a problem solved, 
+                       I'd love to hear from you. I'm always up for a good conversation about code, teaching, or that 
+                       debugging challenge that's been keeping you up at night.</p>
                     <div class="contact-details">
                         <div class="contact-item">
                             <div class="contact-icon">
