--- a/index.html
+++ b/index.html
@@ -102,9 +102,18 @@
                     <span class="title-subtitle">Developer & Educator</span>
                 </h1>
                 <p class="hero-description">
-                    Crafting digital experiences through code while shaping the next generation of developers at Gauteng
-                    City College
+                    I teach Java at Gauteng City College during the day and build desktop applications at night. 
+                    What started as curiosity about how software works has turned into a passion for both creating 
+                    solutions and helping others discover the magic of programming.
                 </p>
+                <div class="achievement-badge">
+                    <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
+                        <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
+                             alt="Ranked #1 Developer in South Africa on committers.top" 
+                             class="committers-badge">
+                    </a>
+                    <span class="badge-text">Ranked #1 Developer in South Africa</span>
+                </div>
                 <div class="personal-note">
                     <p>"I still remember the first time a student's eyes lit up when their Java program finally compiled. 
                        That's when I knew teaching wasn't just a job—it was my calling."</p>
@@ -192,6 +201,13 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="profile-achievement">
+                            <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
+                                <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
+                                     alt="Ranked #1 Developer in South Africa" 
+                                     class="profile-badge">
+                            </a>
+                        </div>
                         <div class="profile-details">
                             <div class="detail-item">
                                 <span class="detail-label">Location</span>
@@ -204,6 +220,10 @@
                             <div class="detail-item">
                                 <span class="detail-label">Specialization</span>
                                 <span class="detail-value">Java Development</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-label">Ranking</span>
+                                <span class="detail-value">#1 in South Africa</span>
                             </div>
                         </div>
                     </div>
@@ -323,6 +343,10 @@
             <div class="section-header">
                 <h2 class="section-title">Skills Arsenal</h2>
                 <div class="section-line"></div>
+                <div class="achievement-highlight">
+                    <i class="fas fa-trophy"></i>
+                    <span>Ranked #1 Developer in South Africa</span>
+                </div>
                 <p class="section-subtitle">Interactive 3D hexagonal mastery across the stack</p>
             </div>
             
@@ -759,7 +783,8 @@
                     <div class="footer-logo">
                         <span class="logo-text">UM</span>
                     </div>
-                    <p>Building the future, one line of code at a time.</p>
+                    <p>Building the future, one student at a time.</p>
+                    <p><small>Ranked #1 Developer in South Africa</small></p>
                 </div>
                 <div class="footer-right">
                     <p>&copy; 2025 Uwami Mgxekwa. Crafted with passion and precision.</p>
