--- a/index.html
+++ b/index.html
@@ -106,14 +106,6 @@
                     What started as curiosity about how software works has turned into a passion for both creating 
                     solutions and helping others discover the magic of programming.
                 </p>
-                <div class="achievement-badge">
-                    <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
-                        <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
-                             alt="Ranked #1 Developer in South Africa on committers.top" 
-                             class="committers-badge">
-                    </a>
-                    <span class="badge-text">Ranked #1 Developer in South Africa</span>
-                </div>
                 <div class="personal-note">
                     <p>"I still remember the first time a student's eyes lit up when their Java program finally compiled. 
                        That's when I knew teaching wasn't just a job—it was my calling."</p>
@@ -201,13 +193,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="profile-achievement">
-                            <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
-                                <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
-                                     alt="Ranked #1 Developer in South Africa" 
-                                     class="profile-badge">
-                            </a>
-                        </div>
                         <div class="profile-details">
                             <div class="detail-item">
                                 <span class="detail-label">Location</span>
@@ -220,10 +205,6 @@
                             <div class="detail-item">
                                 <span class="detail-label">Specialization</span>
                                 <span class="detail-value">Java Development</span>
-                            </div>
-                            <div class="detail-item">
-                                <span class="detail-label">Ranking</span>
-                                <span class="detail-value">#1 in South Africa</span>
                             </div>
                         </div>
                     </div>
@@ -343,10 +324,6 @@
             <div class="section-header">
                 <h2 class="section-title">Skills Arsenal</h2>
                 <div class="section-line"></div>
-                <div class="achievement-highlight">
-                    <i class="fas fa-trophy"></i>
-                    <span>Ranked #1 Developer in South Africa</span>
-                </div>
                 <p class="section-subtitle">Interactive 3D hexagonal mastery across the stack</p>
             </div>
             
@@ -471,14 +448,14 @@
             <div class="github-content">
                 <div class="stats-cards">
                     <div class="stat-card">
-                        <div class="stat-icon">📦</div>
+                        <div class="stat-icon"><i class="fas fa-folder"></i></div>
                         <div class="stat-info">
                             <h3 id="total-repos">--</h3>
                             <p>Public Repositories</p>
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">⭐</div>
+                        <div class="stat-icon"><i class="fas fa-star"></i></div>
                         <div class="stat-info">
                             <h3 id="total-stars">--</h3>
                             <p>Stars Received</p>
@@ -488,11 +465,11 @@
                         <div class="stat-icon"><i class="fas fa-code-branch"></i></div>
                         <div class="stat-info">
                             <h3 id="total-commits">--</h3>
-                            <p>Total Commits</p>
+                            <p>Contributions This Year</p>
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon">👥</div>
+                        <div class="stat-icon"><i class="fas fa-users"></i></div>
                         <div class="stat-info">
                             <h3 id="total-followers">--</h3>
                             <p>Followers</p>
@@ -505,8 +482,16 @@
                         <div class="github-info">
                             <h3 id="github-name">Loading...</h3>
                             <p id="github-bio">Fetching GitHub data...</p>
+                            <div class="github-badge">
+                                <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
+                                    <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
+                                         alt="Ranked #1 Developer in South Africa on committers.top" 
+                                         class="committers-badge-github">
+                                </a>
+                            </div>
                             <a href="https://github.com/Uwami-Mgxekwa" target="_blank" class="github-link">
-                                <span>🔗 View Full Profile</span>
+                                <i class="fab fa-github"></i>
+                                <span>View Full Profile</span>
                             </a>
                         </div>
                     </div>
@@ -784,7 +769,6 @@
                         <span class="logo-text">UM</span>
                     </div>
                     <p>Building the future, one student at a time.</p>
-                    <p><small>Ranked #1 Developer in South Africa</small></p>
                 </div>
                 <div class="footer-right">
                     <p>&copy; 2025 Uwami Mgxekwa. Crafted with passion and precision.</p>
