--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <span class="title-subtitle">Developer & Educator</span>
                 </h1>
                 <p class="hero-description">
-                    I teach Java at Gauteng City College during the day and build desktop applications at night. 
+                    I teach at Gauteng City College during the day and build desktop applications at night. 
                     What started as curiosity about how software works has turned into a passion for both creating 
                     solutions and helping others discover the magic of programming.
                 </p>
@@ -478,16 +478,19 @@
                 </div>
                 <div class="github-profile-card">
                     <div class="profile-header-github">
-                        <img id="github-avatar" src="" alt="GitHub Avatar" class="github-avatar">
+                        <img id="github-avatar" src="https://github.com/Uwami-Mgxekwa.png" alt="Uwami Mgxekwa GitHub Avatar" class="github-avatar">
                         <div class="github-info">
                             <h3 id="github-name">Loading...</h3>
                             <p id="github-bio">Fetching GitHub data...</p>
                             <div class="github-badge">
-                                <a href="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa" target="_blank" rel="noopener">
+                                <a href="https://committers.top/south_africa#Uwami-Mgxekwa" target="_blank" rel="noopener">
                                     <img src="https://user-badge.committers.top/south_africa/Uwami-Mgxekwa.svg" 
                                          alt="Ranked #1 Developer in South Africa on committers.top" 
                                          class="committers-badge-github">
                                 </a>
+                                <div class="badge-description">
+                                    Ranked #1 on committers.top
+                                </div>
                             </div>
                             <a href="https://github.com/Uwami-Mgxekwa" target="_blank" class="github-link">
                                 <i class="fab fa-github"></i>
