--- a/index.html
+++ b/index.html
@@ -388,7 +388,18 @@
                         <div class="hex-inner">
                             <div class="hex-content">
                                 <i class="devicon-mysql-plain colored skill-icon"></i>
-                                <h4>SQL</h4>
+                                <h4>MySQL</h4>
+                                <span class="skill-level">Advanced</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="hex-item" data-skill="80">
+                    <div class="hexagon">
+                        <div class="hex-inner">
+                            <div class="hex-content">
+                                <i class="devicon-postgresql-plain colored skill-icon"></i>
+                                <h4>PostgreSQL</h4>
                                 <span class="skill-level">Advanced</span>
                             </div>
                         </div>
@@ -405,6 +416,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="hex-item" data-skill="80">
+                    <div class="hexagon">
+                        <div class="hex-inner">
+                            <div class="hex-content">
+                                <i class="devicon-python-plain colored skill-icon"></i>
+                                <h4>Python</h4>
+                                <span class="skill-level">Advanced</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Learning Section -->
@@ -414,23 +436,14 @@
                     <div class="learning-card">
                         <i class="devicon-react-original colored learning-icon"></i>
                         <h4>React</h4>
-                        <div class="learning-progress">
-                            <div class="progress-bar" data-progress="70"></div>
-                        </div>
                     </div>
                     <div class="learning-card">
                         <i class="devicon-python-plain colored learning-icon"></i>
                         <h4>Data Analytics</h4>
-                        <div class="learning-progress">
-                            <div class="progress-bar" data-progress="65"></div>
-                        </div>
                     </div>
                     <div class="learning-card">
                         <i class="devicon-csharp-plain colored learning-icon"></i>
                         <h4>C#</h4>
-                        <div class="learning-progress">
-                            <div class="progress-bar" data-progress="50"></div>
-                        </div>
                     </div>
                 </div>
             </div>
